Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ nav ul li a {
 
 .header-content p {
   font-size: 2vw;
-  letter-spacing: 5px;
+  letter-spacing: 1px;
   margin-top: 0;
   margin-bottom: 0;
   text-transform: capitalize;
